--- a/JIRA_DOM/activity/style.css
+++ b/JIRA_DOM/activity/style.css
@@ -1,6 +1,7 @@
-/* basic */
 *{
     box-sizing: border-box;
+    word-break: break-all;
+
 }
 body{
     margin:0px;
@@ -80,11 +81,18 @@ border-radius:2px;
 .fas{
     font-size:x-large;
 }
+.action-container__icons:hover{
+    background-color: rgb(100, 71, 26);
+    
+}
 /* main container css**************************** */
 .main-container{
-    border:5px solid green;
+    /* border:5px solid green; */
 /*  task add 2 */
     min-height: 88vh;
+    background-color: rgb(240, 239, 239);
+    padding: 2rem ;
+    display:flex;
 }
 .modal_container{
     
@@ -128,4 +136,30 @@ height: 12%;
 }
 .border{
     border:2px solid white;
+}
+
+.ticket-container{
+height: 10rem;    
+    width:15rem;
+    background-color:white;
+    
+}
+.ticket-color{
+height:8%;
+/* background-color:black; */
+}
+.ticket_sub-container{
+    height:92%;
+    padding-left:1rem;
+    font-family: sans-serif;
+}
+.ticket-id{
+    height: 3%;
+}
+
+.ticket-desc{
+    text-align: center;
+    height: 70%;
+    overflow: auto;
+    
 }
