--- a/Camera_App/activity/style.css
+++ b/Camera_App/activity/style.css
@@ -21,26 +21,48 @@ body{
     right: 26px;
     border-radius: 50%;
 }
-.click{
+.click-image{
     top: 45%;  
 }
 
-.filters{
-    height:50vh;
-    width:20vw;
-    border:3px solid white;
-    background-color: pink;
-   
-    display: flex;
-    
+.filters_overlay{
+    height:100vh;
+    width:100vw;
+    position:fixed;
+    left:0px;
+    top:0px;
+    z-index: 2;
 }
 
-.filter{
-    height:20%;
-    width:100%;
+.filter_btn-container{
+    height:17rem;
+    width:7rem;
+    position:fixed;
+    top:calc((100vh - 17rem)/2);
+    left: 10vw;
+    background-color: red;
+    z-index:4;
+
     /* background-color:blue; */
 }
 
-.red{
-    background-color:
+.filter{
+    height: 20%;
+    border: 1px solid;
+    /* background-color , background-image will be blended */
+    background-blend-mode: color-burn;
+    background-image: url(https://picsum.photos/200/300);
+    /* width of the background image */
+    background-size: 100%;
+}
+
+.timing{
+    color:white;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    position: 17vh;
+    bottom: 17vh;
+    left:10vw;
+    display: none;
+    z-index:6;
 }
